- Register genres - Convert form data ToDto

--- a/src/index.css
+++ b/src/index.css
@@ -109,3 +109,11 @@ code {
 .card-body {
   background-color: #232323;
 }
+
+.invalid-input {
+  color: #f65261;
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: 0.875em;
+  color: var(--bs-form-invalid-color);
+}
