--- a/src/index.css
+++ b/src/index.css
@@ -118,3 +118,12 @@ code {
   font-size: 0.875em;
   color: var(--bs-form-invalid-color);
 }
+
+.edit-icon {
+  display: none;
+}
+
+.card:hover .edit-icon {
+  display: block;
+  position: absolute;
+}
